# retsend

./: .gitignore  Cargo.toml  README.md  rust-toolchain.toml
.github/workflows/: build-linux-arm.yml  build-linux.yml  ci.yml
docs/: tabs.md
portmaster/: LocalSend Retro.sh  README.md  Retsend.sh  gameinfo.xml  port.json
src/: lib.rs  main.rs
src/app/: command.rs  mod.rs
src/config/: device.rs  display.rs  input.rs  mod.rs  network.rs  paths.rs  transfer.rs
src/event/: gamepad.rs  keyboard.rs  mod.rs  user.rs
src/net/: client.rs  discovery.rs  httpd.rs  mod.rs  protocol.rs  server.rs  tls.rs
src/overlay/: browser.rs  history.rs  home.rs  mod.rs  osk.rs  routes.rs  settings.rs  tabs.rs  toast.rs  transfer.rs
src/platform/: window.rs
src/transfer/: files.rs  history.rs  inbound.rs  mod.rs  outbound.rs  route.rs
src/ui/: browser.rs  history.rs  home.rs  mod.rs  osk.rs  prompt.rs  receive.rs  routes.rs  settings.rs  tabs.rs  theme.rs  transfer.rs  wordmark.rs
tests/: font_glyphs.rs  send.rs  server.rs
