[package]
name = "localsend-retro"
version = "0.1.0"
edition = "2021"
license = "GPL-3.0"
description = "LocalSend client for retro handhelds (SDL2 + egui)"
repository = "https://github.com/mxmgorin/localsend-retro"

[features]
sdl2-bundled = ["sdl2/bundled"]
sdl2-static-link = ["sdl2/static-link"]

# Local release builds stay cheap to compile (Cargo's release defaults); the
# slow, fully-optimized settings are CI-only via CARGO_PROFILE_RELEASE_* env
# vars, same scheme as retsurf.
[profile.release]
strip = true
debug-assertions = false
overflow-checks = false

[dependencies]
sdl2 = { version = "0.38", default-features = false }
egui-sdl2 = { version = "0.4", default-features = false, features = ["glow-backend"] }
glow = "0.17"
serde = { version = "1", features = ["derive"] }
toml = "1.1"
log = "0.4"
env_logger = "0.11"
png = "0.18"
